# smart_lock_intercom

./: .gitignore
android_client/: settings.gradle.kts
android_client/app/: build.gradle.kts  proguard-rules.pro
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/smartlock/intercom/: DoorbellService.kt  IncomingCallActivity.kt  MainActivity.kt
android_client/app/src/main/java/com/smartlock/intercom/media/: AudioCapture.kt  AudioPlayer.kt  VideoDecoder.kt
android_client/app/src/main/java/com/smartlock/intercom/rtsp/: RelayConnection.kt  RtspClient.kt
android_client/app/src/main/java/com/smartlock/intercom/webrtc/: WebRtcClient.kt
android_client/app/src/main/res/layout/: activity_incoming_call.xml  activity_main.xml
android_client/app/src/main/res/values/: strings.xml  themes.xml
android_client/app/src/main/res/xml/: network_security_config.xml
go2rtc/: go2rtc.yaml
intercom_test/: CMakeLists.txt  stream.sdp  test_auth.ps1  test_rtsp_backchannel.ps1  test_rtsp_full.ps1
intercom_test/relay_server/: relay_server.c
intercom_test/src/: audio_in.h  audio_in_win.c  audio_out.h  audio_out_win.c  camera.h  camera_win.c  http_server.c  intercom.h  main.c  relay_client.c  relay_client.h  rtsp_auth.c  rtsp_auth.h  rtsp_server.c  rtsp_server.h  session.c  session_old.c  stun_client.c  stun_client.h
intercom_test/www/: index.html
re-4.6.0/include/: re_tcp.h
re-4.6.0/src/tcp/: tcp.c
